<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Titles -->
    <string name="app_name">IITB Lit</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">cryptics</string>
    <string name="title_section2">ditloids</string>
    <string name="title_section3">anagrams</string>
    <string name="title_section4">rebuses</string>
    <string name="title_section5">highscores</string>

    <!-- Strings -->
    <string name="question_1">Question 1</string>
    <string name="question_2">Question 2</string>
    <string name="question_3">Question 3</string>
    <string name="question_4">Question 4</string>
    <string name="highscores_heading">Highscores</string>
    <string name="final_highscores_heading">Overall highscores</string>
    <string name="answer_hint">Answer here..</string>
    <string name="ques_img_descr">Question comes here..</string>
    <string name="default_uName">No scores yet !</string>
    <string name="default_score">Be the first person !</string>
    <string name="default_progress_msg">Fetching questions..</string>

    <!-- Pseudo buttons -->
    <string name="submit">Submit</string>
    <string name="refresh">Refresh</string>

    <!-- Landing page strings -->
    <string name="landing_code_heading">Restricted use</string>
    <string name="landing_ldap_hint">LDAP id</string>
    <string name="landing_verify_code_hint">Verification code</string>
    <string name="landing_help_heading">Help</string>
    <string name="landing_help">Access is granted using your IIT Bombay LDAP id\n\nYou may however use as guest with ldap: guest\n\nAll Guest users will be considered under one name for highscores.</string>
    <string name="landing_send_btn">Send code</string>
    <string name="landing_verify_btn">Verify me !</string>

    <!-- About strings -->
    <string name="about_version">Version : v1.9 public-release</string>
    <string name="about_IITBLit">An Android app to promote Lit at IITB</string>
    <string name="about_issues_heading">No known issues</string>
    <string name="about_issues">If found report to praveen@praveenkumar.co.in</string>
    <string name="about_credits">Credits</string>

    <!-- About Praveen -->
    <string name="about_praveen">Praveen Kumar Pendyala</string>
    <string name="about_praveen_desc">Android and Web developer,\nSenior undergraduate, Dept. of Electrical Engineering.</string>

    <!-- About Audi -->
    <string name="about_audi">Alekhya Audi</string>
    <string name="about_audi_desc">Conceptualization and execution</string>

    <!-- About Rushabh -->
    <string name="about_rushabh">Rushabh Shah</string>
    <string name="about_rushabh_desc">ideation and conceptualization</string>

    <!-- About Sabat -->
    <string name="about_sabat">Jyotirmayee Sabat</string>
    <string name="about_sabat_desc">Material collection</string>

    <!-- About Korak -->
    <string name="about_korak">Korak Ray</string>
    <string name="about_korak_desc">Material collection</string>

    <!-- Menu -->
    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>
    <string name="menu_tutorial">Tutorial</string>

    <!-- Tutorial -->
    <string name="tut_access_heading">Access to app</string>
    <string name="tut_access_content">To use this application you need an IIT Bombay LDAP id\n\n
        We also have a guest access for those interested. Enter \'guest\' for LDAP to gain guest access.</string>
    <string name="tut_ldap_verify_heading">LDAP verification</string>
    <string name="tut_ldap_verify_content">To verify your ldap we will be sending an email to your ldap
        id with a random code.\n\n
        To pass verification enter your LDAP id and hit \'send code\'\n\n
        Check your email for verification. Enter it in the app and hit \'verify me\'</string>
    <string name="tut_app_usage_heading">Using app</string>
    <string name="tut_app_usage_content">There are 4 sections.
        \n\nEach section has a maximum of 4 questions.
        \n\nSwipe horrizontal to browse through sections
        \n\nEnter your answers in the space provided and hit submit to verify.</string>
    <string name="tut_refer_tut_heading">Referring back</string>
    <string name="tut_refer_tut_content">You can refer this tutorial anytime in future 
        from the options menu.
        \n\nIf you have any further queries or concerns, write to the author
        \n\niitblit@praveenkumar.co.in</string>
    <string name="tut_btn_default">Gotcha!</string>

</resources>