<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:orientation="vertical" >
        
        <!-- Access info -->

        <LinearLayout
            android:id="@+id/tut_access_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="20dp"
                android:text="@string/tut_access_heading"
                android:textColor="@color/ICSBlue"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="20dp"
                android:text="@string/tut_access_content"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>
        
        <!-- ldap verify info -->

        <LinearLayout
            android:id="@+id/tut_ldap_verify_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="20dp"
                android:text="@string/tut_ldap_verify_heading"
                android:textColor="@color/ICSBlue"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="20dp"
                android:text="@string/tut_ldap_verify_content"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>
        
        <!-- app usage info -->

        <LinearLayout
            android:id="@+id/tut_app_usage_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="20dp"
                android:text="@string/tut_app_usage_heading"
                android:textColor="@color/ICSBlue"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="20dp"
                android:text="@string/tut_app_usage_content"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>
        
        <!-- Refer tut info -->

        <LinearLayout
            android:id="@+id/tut_refer_tut_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="20dp"
                android:text="@string/tut_refer_tut_heading"
                android:textColor="@color/ICSBlue"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="20dp"
                android:text="@string/tut_refer_tut_content"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/tut_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:text="@string/tut_btn_default" />

</LinearLayout>