<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/progress_msg_layout"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="horizontal"
        android:weightSum="1"
        android:background="@color/yellow" >

        <TextView
            android:id="@+id/progress_msg"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="0.9"
            android:gravity="center_vertical"
            android:text="@string/default_progress_msg"
            android:textSize="12sp" />

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleSmallTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:paddingBottom="1dp"
            android:paddingRight="5dp"
            android:paddingTop="1dp" />
    </LinearLayout>
    <!-- Swiping content viewer -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:orientation="vertical" >

        <android.support.v4.view.ViewPager
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".Quizzing" >

            <!-- Page titles strip -->

            <android.support.v4.view.PagerTitleStrip
                android:id="@+id/pager_title_strip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:background="#33b5e5"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"
                android:textColor="#fff" />
        </android.support.v4.view.ViewPager>
    </LinearLayout>

    <!-- Border before buttons at the bottom -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/ICSBlue" >
    </LinearLayout>

    <!-- Refresh and Submit buttons -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="@color/white"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/refresh_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.50"
            android:background="@drawable/textview_button_bg"
            android:gravity="center"
            android:text="@string/refresh"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/grey" >
        </LinearLayout>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@drawable/textview_button_bg"
            android:gravity="center"
            android:text="@string/submit"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="italic" />
    </LinearLayout>

</LinearLayout>